--- a/serenity.conf
+++ b/serenity.conf
@@ -1,3 +1,3 @@
 serenity.ssl.verify=false
-serenity.proxy.http=madara.inei.gob.pe
-serenity.proxy.http_port=3218
+serenity.proxy.http=diluc.inei.gob.pe
+serenity.proxy.http_port=3128
